Fixed spacing for task-container divs

--- a/src/homePage3/homePage3.css
+++ b/src/homePage3/homePage3.css
@@ -217,3 +217,21 @@ header {
         }
 
 }
+
+.tasks-container {
+    width: 100%;
+    height: 100%;
+    border: 2px solid red;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    
+    .task-body {
+        width: 30%;
+        height: 20px;
+        border: 2px solid green;
+    }
+
+
+}
+
